[gd_scene load_steps=6 format=3 uid="uid://7jgd3o14ato1"]

[ext_resource type="Script" path="res://!!Assets/Scripts/lvl_select.gd" id="1_d4flp"]
[ext_resource type="Theme" uid="uid://071qepx3jte6" path="res://!!Assets/Textures/Main Menu Theme.tres" id="1_s4bnf"]
[ext_resource type="Texture2D" uid="uid://cwsu1o2v617d" path="res://!!Assets/Sprites/Space Main Menu Background.jpg" id="2_6p8uh"]
[ext_resource type="Shader" path="res://!!Assets/Shaders/Pixelation.gdshader" id="3_63j7d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yxtme"]
shader = ExtResource("3_63j7d")
shader_parameter/pixel_range = 4.0

[node name="lvl select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s4bnf")
script = ExtResource("1_d4flp")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 194.0
offset_top = -13.0
offset_right = 394.0
offset_bottom = 18.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 1
"
expand_icon = true

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -119.0
offset_right = 77.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
text = "Tutorial
"
expand_icon = true

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -13.0
offset_right = 77.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 2"
expand_icon = true

[node name="Button5" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 184.0
offset_top = -13.0
offset_right = 337.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 3"
expand_icon = true

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -35.0
offset_right = 46.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Close"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_yxtme")
offset_right = 1152.0
offset_bottom = 646.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(576, 321)
scale = Vector2(2, 1.8)
texture = ExtResource("2_6p8uh")

[connection signal="pressed" from="Button" to="." method="platformer_pressed"]
[connection signal="pressed" from="Button2" to="." method="zerog_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button4" to="." method="_close_pressed"]
